<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title">Hangman for Android</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_newgame">New</string>
    <string name="button_about">About</string>
    <string name="button_exit">Exit</string>
    <string name="button_continue">Continue</string>
    <string name="start_title">Hangman</string>
    <string name="about_text">Try to guess the secret word before getting hanged! For every wrong letter guessed, a bit more of the hangman is exposed.</string>
    <string name="title_activity_show_about">About Hangman</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game">Game</string>
    <string name="guesses_left_text">Number of guesses left:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="endmessage">You won!!</string>
    <string name="title_word_length">Adjust word length</string>
    <string name="title_guesses">Adjust the number of allowed guesses</string>
    <string name="button_apply">Apply settings</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>

</resources>
