<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context=".MainActivity$PlaceholderFragment">


    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/start_title" android:textSize="14pt"
        android:id="@+id/title"
        android:textColor="#FFFFFF"/>

    <TableRow android:id="@+id/TableRow01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip">

        <Button android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip" android:text="@string/button_newgame"
            android:layout_width="100dip"
            android:id="@+id/newgamebtn"
            android:layout_below="@+id/title"
            android:layout_toRightOf="@+id/continuebtn"/>

        <Button android:layout_height="wrap_content"
            android:id="@+id/continuebtn"
            android:text="@string/button_continue" android:layout_width="100dip"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="false"
            android:layout_marginTop="10dip"/>

    </TableRow>

    <ImageView
        android:layout_below="@+id/title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="150dip"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:id="@+id/hangman"
        android:src="@drawable/hangman"/>

    <TableRow android:id="@+id/TableRow02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TableRow01"
        android:layout_centerHorizontal="true">

        <Button android:layout_below="@+id/newgamebtn"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:text="@string/button_about" android:layout_width="100dip"
            android:id="@+id/aboutbtn"
            android:onClick="showAbout"/>

        <Button android:layout_below="@+id/aboutbtn"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:text="@string/button_exit" android:layout_width="100dip"
            android:id="@+id/exitbtn"/>

    </TableRow>


</RelativeLayout>
